Bug 146822 - FILESAVE DOCX Hatch filling not exported
Summary: FILESAVE DOCX Hatch filling not exported
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Tünde Tóth
URL:
Whiteboard: target:7.4.0 target:7.3.1
Keywords: filter:docx
Depends on:
Blocks:
 
Reported: 2022-01-17 12:25 UTC by NISZ LibreOffice Team
Modified: 2022-03-06 09:33 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Writer (9.97 KB, application/vnd.oasis.opendocument.text)
2022-01-17 12:26 UTC, NISZ LibreOffice Team
Details
Compare screenshot from LO and Word (137.66 KB, image/png)
2022-01-17 12:27 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2022-01-17 12:25:49 UTC
Description:
When filling the shape hatch, the set transparency value is not exported to docx. It works for all other types of fill, but not this one.

Steps to Reproduce:
    1. Open attached file
    2. Save as DOCX
    3. Reload the file

Actual Results:
Hatch is not filled in

Expected Results:
Hatch should filled in


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.4.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: bf883027ee62ece0844730572305094f53daa521
CPU threads: 8; OS: Windows 10.0 Build 19042; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL
Comment 1 NISZ LibreOffice Team 2022-01-17 12:26:59 UTC
Created attachment 177601 [details]
Example file from Writer
Comment 2 NISZ LibreOffice Team 2022-01-17 12:27:34 UTC
Created attachment 177602 [details]
Compare screenshot from LO and Word
Comment 3 Commit Notification 2022-02-03 08:00:22 UTC
Tünde Tóth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b8925251e48534706c6960a54c320d3879317321

tdf#146822 OOXML: fix export of the transparency in hatch fill

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2022-02-03 11:23:52 UTC
Tünde Tóth committed a patch related to this issue.
It has been pushed to "libreoffice-7-3":

https://git.libreoffice.org/core/commit/d036ea9651c05a2a50794bc5c0ee7ea54708ad6a

tdf#146822 OOXML: fix export of the transparency in hatch fill

It will be available in 7.3.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 NISZ LibreOffice Team 2022-02-14 07:41:45 UTC
Verified in:
Version: 7.4.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 42c5506a9e9ef58efd8193a193464e3b49d481ca
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: threaded