tdf#146822 OOXML: fix export of the transparency in hatch fill

The transparency value of the hatch was not exported.

Change-Id: I9b82a3422de8e4f85c534f861c45c0c097ceb02f