sw/qa/extras/uiwriter/uiwriter4.cxx
@@ -290,7 +290,7 @@ public:
     void testTdf129270();
     void testInsertPdf();
     void testTdf143760WrapContourToOff();
-    void testTdf127989();
+    void testHatcFill();
     void testCaptionShape();
 
     CPPUNIT_TEST_SUITE(SwUiWriterTest4);
@@ -414,7 +414,7 @@ public:
     CPPUNIT_TEST(testTdf129270);
     CPPUNIT_TEST(testInsertPdf);
     CPPUNIT_TEST(testTdf143760WrapContourToOff);
-    CPPUNIT_TEST(testTdf127989);
+    CPPUNIT_TEST(testHatcFill);
     CPPUNIT_TEST(testCaptionShape);
     CPPUNIT_TEST_SUITE_END();
 };
@@ -4044,7 +4044,7 @@ void SwUiWriterTest4::testTdf143760WrapContourToOff()
     CPPUNIT_ASSERT_EQUAL(false, getProperty<bool>(getShape(1), "SurroundContour"));
 }
 
-void SwUiWriterTest4::testTdf127989()
+void SwUiWriterTest4::testHatcFill()
 {
     createSwDoc();
 
@@ -4058,16 +4058,20 @@ void SwUiWriterTest4::testTdf127989()
     xShapeProps->setPropertyValue("FillStyle", uno::makeAny(drawing::FillStyle_HATCH));
     xShapeProps->setPropertyValue("FillHatchName", uno::makeAny(OUString("Black 0 Degrees")));
     xShapeProps->setPropertyValue("FillBackground", uno::makeAny(false));
+    xShapeProps->setPropertyValue("FillTransparence", uno::makeAny(sal_Int32(30)));
     uno::Reference<drawing::XDrawPageSupplier> xDrawPageSupplier(mxComponent, uno::UNO_QUERY);
     uno::Reference<drawing::XDrawPage> xDrawPage = xDrawPageSupplier->getDrawPage();
     xDrawPage->add(xShape);
 
     // Save it as DOCX and load it again.
-    reload("Office Open XML Text", "tdf127989.docx");
+    reload("Office Open XML Text", "hatcFill.docx");
     CPPUNIT_ASSERT_EQUAL(1, getShapes());
 
-    // Without fix this had failed, because the background of the hatch was not set as 'no background'.
+    // tdf#127989 Without fix this had failed, because the background of the hatch was not set as 'no background'.
     CPPUNIT_ASSERT(!getProperty<bool>(getShape(1), "FillBackground"));
+
+    // tdf#146822 Without fix this had failed, because the transparency value of the hatch was not exported.
+    CPPUNIT_ASSERT_EQUAL(sal_Int32(30), getProperty<sal_Int32>(getShape(1), "FillTransparence"));
 }
 
 void SwUiWriterTest4::testCaptionShape()
